@@ -4,7 +4,6 @@ from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from eea.dataservice.widgets.ManagementPlanWidget import FormlibManagementPlanWidget
 from eea.dataservice.widgets.ManagementPlanWidget import ManagementPlanCode
 from eea.mediacentre.interfaces import IMediaType
-from eea.geotags.widget.location import GeotagSingleField, GeotagMultiField
 from p4a.common import at
 from p4a.common.formatting import fancy_time_amount
 from p4a.video.browser import video as vid
@@ -19,7 +18,8 @@ from zope.interface import Interface, implements
 
 
 from eea.geotags.widget.location import FormlibGeotagWidget
-from Products.EEAContentTypes.subtypes import IGeotagSingleEdit, IGeotagMultiEdit
+#from Products.EEAContentTypes.subtypes import IGeotagSingleEdit
+from Products.EEAContentTypes.subtypes import IGeotagMultiEdit
 
 #from Products.ZCatalog.CatalogBrains import AbstractCatalogBrain
 
@@ -97,8 +97,8 @@ class ManagementPlanCodeEdit(object):
 class VideoEditForm(vid.VideoEditForm):
     """Form for editing video fields.  """
 
-    form_fields = FormFields(IVideo, IManagementPlanCodeEdit, IGeotagSingleEdit)
-#    form_fields = FormFields(IVideo, IManagementPlanCodeEdit, IGeotagMultiEdit)
+#    form_fields = FormFields(IVideo, IManagementPlanCodeEdit, IGeotagSingleEdit)
+    form_fields = FormFields(IVideo, IManagementPlanCodeEdit, IGeotagMultiEdit)
     
     form_fields = form_fields.omit('urls')
     form_fields['rich_description'].custom_widget = at.RichTextEditWidget
